--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+    <meta name="msvalidate.01" content="3EBBA2D006621F954F8D4C9AA69AF981" />
     <meta charset="UTF-8">
     <title>يلا شوت - بث مباشر لكرة القدم</title>
     <meta name="description" content="يلا شوت - تابع مباريات كرة القدم بث مباشر بجودة عالية وبدون تقطيع.">
