--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-VEX3CWL5TX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-VEX3CWL5TX');
+</script>
     <meta name="msvalidate.01" content="3EBBA2D006621F954F8D4C9AA69AF981" />
     <meta charset="UTF-8">
     <title>يلا شوت - بث مباشر لكرة القدم</title>
