--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta charset="UTF-8">
     <title>يلا شوت - بث مباشر لكرة القدم</title>
     <meta name="description" content="يلا شوت - تابع مباريات كرة القدم بث مباشر بجودة عالية وبدون تقطيع.">
-    <meta name="keywords" content="يلا شوت, بث مباشر, مباريات اليوم, كرة القدم, Yalla Shoot">
+    <meta name="keywords" content="يلا شوت, بث مباشر, مباريات اليوم, كرة القدم, Yalla Shoot, yalla live , يلا لايف ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
         body {
@@ -51,6 +51,20 @@
             color: #d32f2f;
             margin-bottom: 10px;
         }
+        .watch-button {
+            display: inline-block;
+            background: #d32f2f;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 5px;
+            text-decoration: none;
+            font-size: 1rem;
+            margin-top: 10px;
+            transition: background 0.3s;
+        }
+        .watch-button:hover {
+            background: #a82828;
+        }
         .footer {
             background-color: #d32f2f;
             color: #fff;
@@ -71,6 +85,7 @@
         <div class="section">
             <h2>عن موقع يلا شوت</h2>
             <p>يقدم موقع يلا شوت خدمة البث المباشر لأهم مباريات كرة القدم حول العالم. تابع مبارياتك المفضلة في الدوريات الكبرى بجودة عالية وبدون الحاجة إلى اشتراك.</p>
+            <a href="#watch-now" class="watch-button">شاهد الآن</a>
         </div>
 
         <!-- Features Section -->
