--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div class="section">
             <h2>عن موقع يلا شوت</h2>
             <p>يقدم موقع يلا شوت خدمة البث المباشر لأهم مباريات كرة القدم حول العالم. تابع مبارياتك المفضلة في الدوريات الكبرى بجودة عالية وبدون الحاجة إلى اشتراك.</p>
-            <a href="#watch-now" class="watch-button">شاهد الآن</a>
+            <a href="https://fawanews.co.uk" class="watch-button">شاهد الآن</a>
         </div>
 
         <!-- Features Section -->
