--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
+    <script type='text/javascript' src='//pl25027060.profitablecpmrate.com/5e/d4/76/5ed476b7b596902ea4ed21f1a892390d.js'></script>
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-VEX3CWL5TX"></script>
 <script>
